# ITLab1

./: .gitignore  Cargo.toml  db  db2  new-db
db-server/: Cargo.toml
db-server/src/: main.rs
graphql-server/: Cargo.toml  example.txt
graphql-server/src/: main.rs  types.rs
grpc-server/: Cargo.toml
grpc-server/src/: main.rs
gui/: Cargo.toml
gui-grpc/: Cargo.toml
gui-grpc/src/: main.rs
gui/src/: main.rs
gui2/: Cargo.toml
proto/: database.proto
rest-server/: Cargo.toml
rest-server/src/: main.rs
simple-db/: Cargo.toml  build.rs
simple-db/src/: database.rs  lib.rs  rpc.rs  table.rs  tests.rs  types.rs
