[package]
name = "graphql-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
juniper = "0.15.11"
simple-db = { path = "../simple-db" }
futures = "0.3.1"
hyper = {version = "0.14", features = ["server", "runtime"]}
serde_json = "1.0"
url = "2"
pretty_env_logger = "0.4"
reqwest = { version = "0.11", features = ["blocking", "rustls-tls"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
juniper_hyper = "0.8.0"
