[package]
name = "gui-grpc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
druid = "0.8.3"
serde_json = "1.0.107"
simple-db = { path = "../simple-db" }
tarpc = { version = "0.33.0", features = ["full"] }
tokio = { version = "1.33.0", features = ["full"] }
futures = "0.3"
tonic = "0.10.2"
prost = "0.12.3"

[dev-dependencies]
tempfile = "3.8.0"

[build-dependencies]
tonic-build = "0.10.2"