[package]
name = "rest-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
itertools = "0.11.0"
serde = { version = "1.0.189", features = ["derive"] }
thiserror = "1.0.49"
serde_json = "1"
tarpc = { version = "0.33.0", features = ["full"] }
tokio = { version = "1.33.0", features = ["full"] }
futures = "0.3"
simple-db = { path = "../simple-db" }
actix-web = "4"
env_logger = "0.10.0"